<resources>
    <string name="app_name">The Cause</string>

    <string name="splash_screen_content_description">Bleu Market Group splash screen</string>


    <string name="activity_browse_title">Browse</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_settings">Settings</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="title_activity_browse">Browse</string>

    <string name="hello_world">Hello world!</string>
    <string name="browse_donate_button_text">DONATE</string>
    <string name="browse_volunteer_button_text">VOLUNTEER</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="organization_information_mission_text">MISSION</string>
    <string name="organization_information_location_text">LOCATION</string>
    <string name="title_activity_maps">Map</string>
    <string name="organization_information_contact_text">CONTACT:</string>
    <string name="organization_information_contact_email">EMAIL:</string>
    <string name="organization_information_contact_phone">PHONE:</string>
    <string name="organization_information_contributions">CONTRIBUTIONS / \nGIFTS / GRANTS: </string>
    <string name="organization_information_total_revenue_text">TOTAL REVENUE:</string>
    <string name="organization_information_administrative_expenses_text">ADMINISTRATIVE \nEXPENSES:</string>
    <string name="organization_information_program_expenses_text">PROGRAM EXPENSES:</string>
    <string name="organization_information_donation_average_text">DONTATION AVERAGE:</string>
    <string name="organization_information_total_donations_text">TOTAL DONATIONS:</string>
    <string name="organization_information_donation_total_text">DONTATION TOTAL:</string>
    <string name="organization_information_fundraising_expenses_text">FUNDRAISING \nEXPENSES:</string>
    <string name="title_activity_login">Login</string>
    <string name="register_email">EMAIL:</string>
    <string name="register_password">PASSWORD:</string>
    <string name="register_password_confirmation">CONFIRM:</string>
    <string name="register_first_name">FIRST NAME:</string>
    <string name="register_last_name">LAST NAME:</string>
    <string name="activity_title_donate">Donate</string>
    <string name="activity_title_register">Register</string>
    <string name="title_activity_messages">Messages</string>
    <string name="activity_title_search">Search</string>
    <string name="activity_title_favorites">Favorites</string>
    <string name="activity_title_settings">Settings</string>
    <string name="opportunity_information_start_date_text">START:</string>
    <string name="opportunity_information_end_date_text">END:</string>
    <string name="opportunity_information_event_date_text">EVENT DATE:</string>
    <string name="donate_donation_amount_text">DONATION AMOUNT</string>
    <string name="donate_five_dollar_donate_amount">$5</string>
    <string name="donate_twenty_five_dollar_donate_amount">$25</string>
    <string name="donate_one_hundred_dollar_donate_amount">$100</string>
    <string name="donate_fifty_dollar_donate_amount">$50</string>
    <string name="donate_two_hundred_fifty_dollar_donate_amount">$250</string>
    <string name="donate_five_hundred_dollar_donate_amount">$500</string>
    <string name="donate_other_donation_amount">OTHER</string>
    <string name="donate_extra_donation_text">include $1 donation to Bleu Market Group</string>
    <string name="donate_donate_button_text">Donate</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_sign_up_text">Sign Up</string>
    <string name="register_register_button_text">Register</string>
    <string name="search_zip_code_hint">enter zip code...</string>
    <string name="settings_user_section_text">User</string>
    <string name="settings_login_option_text">Login</string>
    <string name="opportunity_information_volunteer_button_text">Volunteer</string>
    <string name="organization_information_donate_button_text">Donate</string>


</resources>
