<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bmg="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobile.bmg.activity.DonateActivity">

    <android.support.v7.widget.Toolbar android:id="@+id/donate_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/bmg_green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.mobile.android.common.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/activity_title_donate"
            android:textColor="@color/White"
            android:textSize="19sp"
            bmg:typeface="TrebuchetMS.ttf" />

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.mobile.android.common.FontableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/bmg_light_gray"
                bmg:typeface="TrebuchetMS.ttf"
                android:text="@string/donate_donation_amount_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/Gray"/>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/donate_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_five_dollar_donate_amount"
                        android:id="@+id/donate_five_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_twenty_five_dollar_donate_amount"
                        android:id="@+id/donate_twenty_five_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_fifty_dollar_donate_amount"
                        android:id="@+id/donate_fifty_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_one_hundred_dollar_donate_amount"
                        android:id="@+id/donate_one_hundred_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_two_hundred_fifty_dollar_donate_amount"
                        android:id="@+id/donate_two_hundred_fifty_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_five_hundred_dollar_donate_amount"
                        android:id="@+id/donate_five_hundred_dollars"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/Gray"/>

                    <RadioButton
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate_other_donation_amount"
                        android:id="@+id/donate_other_dollars"
                        android:checked="false"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp" />

                </RadioGroup>

                <EditText
                    android:id="@+id/donate_other_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginLeft="100dp"
                    android:background="@color/White"
                    android:padding="11dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="2dp" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Gray"/>

            <CheckBox
                android:id="@+id/donate_extra_donation_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/bmg_dark_gray"
                android:text="@string/donate_extra_donation_text"
                android:checked="true"
                android:layout_gravity="right" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Gray"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:layout_weight="1">

                <com.mobile.android.common.FontableTextView
                    android:id="@+id/donate_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donate_donate_button_text"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    bmg:typeface="TrebuchetMS.ttf"
                    android:textColor="@color/White"
                    android:textSize="23sp"
                    android:padding="15dp"
                    android:background="@color/bmg_disabled_green"
                    android:enabled="false" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
