<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bmg="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context="com.mobile.bmg.activity.SettingsActivity">

    <com.mobile.android.common.FontableTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/activity_title_settings"
        android:textColor="@color/White"
        android:textSize="19sp"
        bmg:typeface="TrebuchetMS.ttf"
        android:background="@color/bmg_green"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mobile.android.common.FontableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_user_section_text"
                android:textColor="@color/bmg_dark_gray"
                android:textSize="17sp"
                bmg:typeface="TrebuchetMS.ttf"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"/>

            <com.mobile.android.common.FontableTextView
                android:id="@+id/settings_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/bmg_light_gray"
                android:textSize="15sp"
                bmg:typeface="TrebuchetMS.ttf"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/Gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mobile.android.common.FontableTextView
                android:id="@+id/settings_login_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_login_option_text"
                android:textColor="@color/Black"
                android:textSize="18sp"
                bmg:typeface="TrebuchetMS.ttf"
                android:paddingLeft="15dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|left"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/tableviewcell_arrow"
                android:layout_gravity="center_vertical|right"
                android:paddingRight="15dp"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/Gray"/>

    </LinearLayout>


</LinearLayout>
