<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bmg="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:background="@color/White">

    <android.support.v7.widget.Toolbar android:id="@+id/login_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/bmg_green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.mobile.android.common.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/title_activity_login"
            android:textColor="@color/White"
            android:textSize="19sp"
            bmg:typeface="TrebuchetMS.ttf" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/White"
            android:padding="5dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_image"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Gray"/>

            <LinearLayout
                android:id="@+id/register_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mobile.android.common.FontableTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical|left"
                    android:textSize="15sp"
                    bmg:typeface="TrebuchetMS.ttf"
                    android:textColor="@color/bmg_light_gray"
                    android:text="@string/register_email"/>

                <EditText
                    android:id="@+id/usernameText"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|right"
                    android:textSize="20sp"
                    android:textColor="@color/bmg_dark_gray"
                    android:inputType="textEmailAddress"
                    android:background="@color/White"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="3dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Gray"/>

            <LinearLayout
                android:id="@+id/register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mobile.android.common.FontableTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical|left"
                    android:textSize="15sp"
                    bmg:typeface="TrebuchetMS.ttf"
                    android:textColor="@color/bmg_light_gray"
                    android:text="@string/register_password"/>

                <EditText
                    android:id="@+id/passwordText"
                    android:inputType="textPassword"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical|right"
                    android:textSize="20sp"
                    android:textColor="@color/bmg_dark_gray"
                    android:background="@color/White"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />


            <com.mobile.android.common.FontableTextView
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login_button_text"
                android:layout_gravity="center"
                android:gravity="center"
                bmg:typeface="TrebuchetMS.ttf"
                android:textColor="@color/White"
                android:textSize="21sp"
                android:padding="15dp"
                android:background="@color/bmg_blue"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <com.mobile.android.common.FontableTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up_text"
                android:id="@+id/signUpText"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center_horizontal|bottom"
                android:textColor="@color/bmg_blue"
                bmg:typeface="TrebuchetMS.ttf"
                android:textSize="16sp"
                android:padding="10dp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
